--- a/cbcui/ui/Settings.ui
+++ b/cbcui/ui/Settings.ui
@@ -1,7 +1,8 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>Settings</class>
- <widget class="QWidget" name="Settings" >
-  <property name="geometry" >
+ <widget class="QWidget" name="Settings">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,28 +10,28 @@
     <height>213</height>
    </rect>
   </property>
-  <property name="minimumSize" >
+  <property name="minimumSize">
    <size>
     <width>320</width>
     <height>213</height>
    </size>
   </property>
-  <property name="maximumSize" >
+  <property name="maximumSize">
    <size>
     <width>320</width>
     <height>213</height>
    </size>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QHBoxLayout" >
+  <layout class="QHBoxLayout">
    <item>
     <spacer>
-     <property name="orientation" >
+     <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
-     <property name="sizeHint" >
+     <property name="sizeHint" stdset="0">
       <size>
        <width>62</width>
        <height>20</height>
@@ -39,13 +40,13 @@
     </spacer>
    </item>
    <item>
-    <layout class="QVBoxLayout" >
+    <layout class="QVBoxLayout">
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
          <height>40</height>
@@ -54,23 +55,23 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="ui_recalibrateMotorsButton" >
-       <property name="enabled" >
+      <widget class="QPushButton" name="ui_recalibrateMotorsButton">
+       <property name="enabled">
         <bool>true</bool>
        </property>
-       <property name="minimumSize" >
+       <property name="minimumSize">
         <size>
          <width>160</width>
          <height>30</height>
         </size>
        </property>
-       <property name="maximumSize" >
+       <property name="maximumSize">
         <size>
          <width>160</width>
          <height>30</height>
         </size>
        </property>
-       <property name="styleSheet" >
+       <property name="styleSheet">
         <string>QPushButton{
 border:0px;
 background-image:url(:/actions/rivet160x30L.png);
@@ -84,17 +85,17 @@ color:white;
 font-size:12pt;
 }</string>
        </property>
-       <property name="text" >
+       <property name="text">
         <string>Recalibrate Motors</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
          <height>40</height>
@@ -103,23 +104,23 @@ font-size:12pt;
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="ui_recalibrateAccelerometerButton" >
-       <property name="enabled" >
+      <widget class="QPushButton" name="ui_recalibrateAccelerometerButton">
+       <property name="enabled">
         <bool>true</bool>
        </property>
-       <property name="minimumSize" >
+       <property name="minimumSize">
         <size>
          <width>160</width>
          <height>30</height>
         </size>
        </property>
-       <property name="maximumSize" >
+       <property name="maximumSize">
         <size>
          <width>160</width>
          <height>30</height>
         </size>
        </property>
-       <property name="styleSheet" >
+       <property name="styleSheet">
         <string>QPushButton{
 border:0px;
 background-image:url(:/actions/rivet160x30L.png);
@@ -133,10 +134,10 @@ color:white;
 font-size:12pt;
 }</string>
        </property>
-       <property name="text" >
+       <property name="text">
         <string>Recalibrate Accelerometer</string>
        </property>
-       <property name="iconSize" >
+       <property name="iconSize">
         <size>
          <width>30</width>
          <height>30</height>
@@ -146,10 +147,10 @@ font-size:12pt;
      </item>
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
          <height>40</height>
@@ -158,20 +159,20 @@ font-size:12pt;
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="ui_resetPIDButton" >
-       <property name="minimumSize" >
+      <widget class="QPushButton" name="ui_resetPIDButton">
+       <property name="minimumSize">
         <size>
          <width>160</width>
          <height>30</height>
         </size>
        </property>
-       <property name="maximumSize" >
+       <property name="maximumSize">
         <size>
          <width>160</width>
          <height>30</height>
         </size>
        </property>
-       <property name="styleSheet" >
+       <property name="styleSheet">
         <string>QPushButton{
 border:0px;
 background-image:url(:/actions/rivet160x30L.png);
@@ -185,17 +186,17 @@ color:white;
 font-size:12pt;
 }</string>
        </property>
-       <property name="text" >
+       <property name="text">
         <string>Reset PID</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
          <height>40</height>
@@ -204,20 +205,20 @@ font-size:12pt;
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="ui_cameraDefaultButton" >
-       <property name="minimumSize" >
+      <widget class="QPushButton" name="ui_cameraDefaultButton">
+       <property name="minimumSize">
         <size>
          <width>160</width>
          <height>30</height>
         </size>
        </property>
-       <property name="maximumSize" >
+       <property name="maximumSize">
         <size>
          <width>160</width>
          <height>30</height>
         </size>
        </property>
-       <property name="styleSheet" >
+       <property name="styleSheet">
         <string>QPushButton{
 border:0px;
 background-image:url(:/actions/rivet160x30L.png);
@@ -231,20 +232,20 @@ color:white;
 font-size:12pt;
 }</string>
        </property>
-       <property name="text" >
-        <string>Camera Defaults</string>
+       <property name="text">
+        <string>Vision Defaults</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QCheckBox" name="ui_consoleShowBox" >
-       <property name="layoutDirection" >
+      <widget class="QCheckBox" name="ui_consoleShowBox">
+       <property name="layoutDirection">
         <enum>Qt::RightToLeft</enum>
        </property>
-       <property name="text" >
+       <property name="text">
         <string>Show Console on Run</string>
        </property>
-       <property name="checked" >
+       <property name="checked">
         <bool>true</bool>
        </property>
       </widget>
@@ -253,10 +254,10 @@ font-size:12pt;
    </item>
    <item>
     <spacer>
-     <property name="orientation" >
+     <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
-     <property name="sizeHint" >
+     <property name="sizeHint" stdset="0">
       <size>
        <width>61</width>
        <height>20</height>
