removed HSV printing on Vision page due to lock up issue, unsure why? Changed back and close buttons on mainWindow to indicate state. Changed Exposure default value to 12.

--- a/cbcui/rc/images.qrc
+++ b/cbcui/rc/images.qrc
@@ -1,11 +1,9 @@
 <RCC>
-    <qresource prefix="/" >
+    <qresource prefix="/">
         <file>background-inverted.png</file>
         <file>background.png</file>
     </qresource>
-    <qresource prefix="/actions" >
-        <file>back-wide.png</file>
-        <file>close-wide.png</file>
+    <qresource prefix="/actions">
         <file>back.png</file>
         <file>close.png</file>
         <file>rivet30x30L.png</file>
@@ -30,5 +28,9 @@
         <file>arrowUp-30D.png</file>
         <file>arrowUp-30L.png</file>
         <file>cbc_2.png</file>
+        <file>close-60D.png</file>
+        <file>close-60L.png</file>
+        <file>back-60D.png</file>
+        <file>back-60L.png</file>
     </qresource>
 </RCC>
