--- a/cbcui/ui/Settings.ui
+++ b/cbcui/ui/Settings.ui
@@ -25,196 +25,174 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QHBoxLayout">
+  <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <spacer>
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>62</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <spacer name="horizontalSpacer_4">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <layout class="QVBoxLayout">
+       <property name="spacing">
+        <number>0</number>
+       </property>
+       <item>
+        <widget class="QPushButton" name="ui_recalibrateMotorsButton">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>160</width>
+           <height>30</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>160</width>
+           <height>30</height>
+          </size>
+         </property>
+         <property name="styleSheet">
+          <string>QPushButton{
+border:0px;
+background-image:url(:/actions/rivet160x30L.png);
+color:black;
+font-size:12pt;
+}
+QPushButton:pressed{
+border:0px;
+background-image:url(:/actions/rivet160x30D.png);
+color:white;
+font-size:12pt;
+}</string>
+         </property>
+         <property name="text">
+          <string>Recalibrate Motors</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer>
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QPushButton" name="ui_recalibrateAccelerometerButton">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>160</width>
+           <height>30</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>160</width>
+           <height>30</height>
+          </size>
+         </property>
+         <property name="styleSheet">
+          <string>QPushButton{
+border:0px;
+background-image:url(:/actions/rivet160x30L.png);
+color:black;
+font-size:12pt;
+}
+QPushButton:pressed{
+border:0px;
+background-image:url(:/actions/rivet160x30D.png);
+color:white;
+font-size:12pt;
+}</string>
+         </property>
+         <property name="text">
+          <string>Recalibrate Accelerometer</string>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>30</width>
+           <height>30</height>
+          </size>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer>
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_3">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
    </item>
    <item>
-    <layout class="QVBoxLayout">
-     <item>
-      <spacer>
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="ui_recalibrateMotorsButton">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>160</width>
-         <height>30</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>160</width>
-         <height>30</height>
-        </size>
-       </property>
-       <property name="styleSheet">
-        <string>QPushButton{
-border:0px;
-background-image:url(:/actions/rivet160x30L.png);
-color:black;
-font-size:12pt;
-}
-QPushButton:pressed{
-border:0px;
-background-image:url(:/actions/rivet160x30D.png);
-color:white;
-font-size:12pt;
-}</string>
-       </property>
-       <property name="text">
-        <string>Recalibrate Motors</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer>
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="ui_recalibrateAccelerometerButton">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>160</width>
-         <height>30</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>160</width>
-         <height>30</height>
-        </size>
-       </property>
-       <property name="styleSheet">
-        <string>QPushButton{
-border:0px;
-background-image:url(:/actions/rivet160x30L.png);
-color:black;
-font-size:12pt;
-}
-QPushButton:pressed{
-border:0px;
-background-image:url(:/actions/rivet160x30D.png);
-color:white;
-font-size:12pt;
-}</string>
-       </property>
-       <property name="text">
-        <string>Recalibrate Accelerometer</string>
-       </property>
-       <property name="iconSize">
-        <size>
-         <width>30</width>
-         <height>30</height>
-        </size>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer>
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="ui_brightnessButton">
-       <property name="minimumSize">
-        <size>
-         <width>160</width>
-         <height>30</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>160</width>
-         <height>30</height>
-        </size>
-       </property>
-       <property name="styleSheet">
-        <string>QPushButton{
-border:0px;
-background-image:url(:/actions/rivet160x30L.png);
-color:black;
-font-size:12pt;
-}
-QPushButton:pressed{
-border:0px;
-background-image:url(:/actions/rivet160x30D.png);
-color:white;
-font-size:12pt;
-}</string>
-       </property>
-       <property name="text">
-        <string>Brightness</string>
-       </property>
-      </widget>
-     </item>
-     <item>
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="2" column="1">
       <widget class="QPushButton" name="ui_resetPIDButton">
        <property name="minimumSize">
         <size>
-         <width>160</width>
+         <width>95</width>
          <height>30</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
-         <width>160</width>
+         <width>95</width>
          <height>30</height>
         </size>
        </property>
        <property name="styleSheet">
-        <string>QPushButton{
+        <string notr="true">QPushButton{
 border:0px;
-background-image:url(:/actions/rivet160x30L.png);
+background-image:url(:/actions/rivet95x30L.png);
 color:black;
 font-size:12pt;
 }
 QPushButton:pressed{
 border:0px;
-background-image:url(:/actions/rivet160x30D.png);
+background-image:url(:/actions/rivet95x30D.png);
 color:white;
 font-size:12pt;
 }</string>
@@ -224,43 +202,63 @@ font-size:12pt;
        </property>
       </widget>
      </item>
-     <item>
-      <spacer>
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="ui_cameraDefaultButton">
+     <item row="1" column="0">
+      <widget class="QPushButton" name="ui_brightnessButton">
        <property name="minimumSize">
         <size>
-         <width>160</width>
+         <width>95</width>
          <height>30</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
-         <width>160</width>
+         <width>95</width>
          <height>30</height>
         </size>
        </property>
        <property name="styleSheet">
-        <string>QPushButton{
+        <string notr="true">QPushButton{
 border:0px;
-background-image:url(:/actions/rivet160x30L.png);
+background-image:url(:/actions/rivet95x30L.png);
 color:black;
 font-size:12pt;
 }
 QPushButton:pressed{
 border:0px;
-background-image:url(:/actions/rivet160x30D.png);
+background-image:url(:/actions/rivet95x30D.png);
+color:white;
+font-size:12pt;
+}</string>
+       </property>
+       <property name="text">
+        <string>Brightness</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QPushButton" name="ui_cameraDefaultButton">
+       <property name="minimumSize">
+        <size>
+         <width>95</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>95</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QPushButton{
+border:0px;
+background-image:url(:/actions/rivet95x30L.png);
+color:black;
+font-size:12pt;
+}
+QPushButton:pressed{
+border:0px;
+background-image:url(:/actions/rivet95x30D.png);
 color:white;
 font-size:12pt;
 }</string>
@@ -269,6 +267,56 @@ font-size:12pt;
         <string>Vision Defaults</string>
        </property>
       </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QPushButton" name="ui_volumeButton">
+       <property name="minimumSize">
+        <size>
+         <width>95</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>95</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QPushButton{
+border:0px;
+background-image:url(:/actions/rivet95x30L.png);
+color:black;
+font-size:12pt;
+}
+QPushButton:pressed{
+border:0px;
+background-image:url(:/actions/rivet95x30D.png);
+color:white;
+font-size:12pt;
+}</string>
+       </property>
+       <property name="text">
+        <string>Volume</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
      </item>
      <item>
       <widget class="QCheckBox" name="ui_consoleShowBox">
@@ -283,20 +331,20 @@ font-size:12pt;
        </property>
       </widget>
      </item>
+     <item>
+      <spacer name="horizontalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
     </layout>
-   </item>
-   <item>
-    <spacer>
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>61</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
    </item>
   </layout>
  </widget>
