Added a delete button to the file manager page.

--- a/cbcui/ui/About.ui
+++ b/cbcui/ui/About.ui
@@ -57,7 +57,7 @@ p, li { white-space: pre-wrap; }
        <property name="text">
         <string>CBC Software by:
 Jorge Villatoro
-Monkeyboy Matt
+Matt Roman
 Randy Sargent</string>
        </property>
       </widget>
