Still working on the WiFi page

--- a/cbcui/ui/Wireless.ui
+++ b/cbcui/ui/Wireless.ui
@@ -22,6 +22,11 @@
     <height>213</height>
    </size>
   </property>
+  <property name="font">
+   <font>
+    <pointsize>9</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
@@ -49,6 +54,37 @@
      <property name="spacing">
       <number>6</number>
      </property>
+     <item>
+      <widget class="QLabel" name="ui_ipLabel">
+       <property name="minimumSize">
+        <size>
+         <width>100</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>100</width>
+         <height>16777215</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color:lightGreen</string>
+       </property>
+       <property name="text">
+        <string>KIPR
+192.168.123.111</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
