Wireless pages appears to work properly. Still need to add signal strength icons.

--- a/cbcui/ui/Wireless.ui
+++ b/cbcui/ui/Wireless.ui
@@ -74,7 +74,7 @@
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">color:lightGreen</string>
+        <string notr="true">color:white</string>
        </property>
        <property name="text">
         <string>KIPR
