Wifi page is really working. It will connect to WPAPSK, OPEN, and Ad-Hoc networks. Haven't tried WEP or Shared yet.

--- a/cbcui/rc/images.qrc
+++ b/cbcui/rc/images.qrc
@@ -44,5 +44,6 @@
         <file>botguy_wifi1.png</file>
         <file>botguy_wifi2.png</file>
         <file>botguy_wifi3.png</file>
+        <file>lock.png</file>
     </qresource>
 </RCC>
