--- a/cbcui/ui/WifiItem.ui
+++ b/cbcui/ui/WifiItem.ui
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>wifiWidgetItem</class>
- <widget class="QWidget" name="wifiWidgetItem">
+ <class>WifiItem</class>
+ <widget class="QWidget" name="WifiItem">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>320</width>
+    <width>316</width>
     <height>35</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>320</width>
+    <width>316</width>
     <height>35</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>320</width>
+    <width>316</width>
     <height>35</height>
    </size>
   </property>
@@ -26,7 +26,7 @@
    <string>Form</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color:white;</string>
+   <string notr="true"/>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <property name="spacing">
@@ -75,13 +75,13 @@ background-image:url(:/actions/botguy_wifi3.png);
     <widget class="QLabel" name="ui_ssidLabel">
      <property name="minimumSize">
       <size>
-       <width>140</width>
+       <width>130</width>
        <height>0</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
-       <width>140</width>
+       <width>130</width>
        <height>16777215</height>
       </size>
      </property>
@@ -103,30 +103,19 @@ background-image:url(:/actions/botguy_wifi3.png);
      <property name="minimumSize">
       <size>
        <width>20</width>
-       <height>30</height>
+       <height>22</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
        <width>20</width>
-       <height>30</height>
+       <height>22</height>
       </size>
      </property>
      <property name="styleSheet">
-      <string notr="true"/>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QLabel" name="ui_macLabel">
-     <property name="maximumSize">
-      <size>
-       <width>130</width>
-       <height>16777215</height>
-      </size>
-     </property>
-     <property name="text">
-      <string>00:00:00:00:00:00</string>
+      <string notr="true">QWidget{border:0px;
+background-image:url(:/actions/lock.png);
+}</string>
      </property>
     </widget>
    </item>
@@ -142,6 +131,19 @@ background-image:url(:/actions/botguy_wifi3.png);
       </size>
      </property>
     </spacer>
+   </item>
+   <item>
+    <widget class="QLabel" name="ui_accessPointLabel">
+     <property name="maximumSize">
+      <size>
+       <width>130</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>00:00:00:00:00:00</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
