Tweeked the wifi pages for better visibility and print out mac address on refresh. Also tested the new gcc user code compile script with unistd.h and fcntl.h included so serial port programming is available.

--- a/cbcui/ui/WifiDialog.ui
+++ b/cbcui/ui/WifiDialog.ui
@@ -53,28 +53,6 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QLabel" name="label_2">
-       <property name="minimumSize">
-        <size>
-         <width>100</width>
-         <height>0</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>100</width>
-         <height>16777215</height>
-        </size>
-       </property>
-       <property name="text">
-        <string>SSID:</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-       </property>
-      </widget>
-     </item>
-     <item>
       <widget class="QLabel" name="ui_ssidLabel">
        <property name="font">
         <font>
@@ -87,7 +65,7 @@
         <string>KIPR</string>
        </property>
        <property name="alignment">
-        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+        <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
