Updated about page

--- a/cbcui/ui/About.ui
+++ b/cbcui/ui/About.ui
@@ -71,7 +71,8 @@ p, li { white-space: pre-wrap; }
         <string>CBC Software by:
 Matt Roman
 Logan Cox
-Randy Sargent</string>
+Randy Sargent
+Braden McDorman</string>
        </property>
       </widget>
      </item>
